c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/compound_bitwise_or.c
int main(void) {
    int to_or = 1;
    to_or |= 30;
    return to_or;
}