c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/redefine.c
int main(void) {
    int a = 1;
    int a = 2;
    return a;
}